[package]
name = "conserve-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
conserve = "23"
libc = "0.2"
fuser = "0.14"
clap = { version = "4.4.8", features = ["derive"] }
log = { version = "0.4.20", features = ["std"] }
env_logger = "0.10.1"
snafu = { version = "0.7.5", features = ["backtraces"] }

[dev-dependencies]
pretty_assertions = "1.4.0"
