[package]
name = "conserve-fuse"
version = "0.1.1"
edition = "2021"
authors = [ "Antonin Amand <antonin.amand@gmail.com>" ]
license-file = "LICENSE"
keywords = ["backup", "mount", "fuse"]
repository = "https://github.com/gwik/conserve-fuse"
documentation = "https://docs.rs/conserve-fuse"
description = "Conserve backup tool FUSE filesystem"

[[bin]]
name = "conserve-mount"
path = "src/main.rs"

[dependencies]
conserve = "23"
libc = "0.2"
fuser = "0.14"
clap = { version = "4.4.8", features = ["derive"] }
log = { version = "0.4.20", features = ["std"] }
env_logger = "0.10.1"
snafu = { version = "0.7.5", features = ["backtraces"] }
bytes = "1.5.0"
ctrlc = { version = "3.4.1", features = ["termination"] }

[dev-dependencies]
blake2-rfc = "0.2.18"
pretty_assertions = "1.4.0"
